// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kpi-rating-criteria-field Renders \`kpi-rating-criteria-field\` with custom props 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          Criteria
        </label>
        <div
          class="v-select__selections"
        >
          <div
            class="v-select__selection v-select__selection--comma"
          >
            Rating setting 2
          </div>
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          type="hidden"
          value="[object Object]"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`kpi-rating-criteria-field Renders \`kpi-rating-criteria-field\` with custom props 2`] = `undefined`;

exports[`kpi-rating-criteria-field Renders \`kpi-rating-criteria-field\` without props 1`] = `
<div
  class="v-input v-input--hide-details theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Criteria
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`kpi-rating-criteria-field Renders \`kpi-rating-criteria-field\` without props 2`] = `undefined`;
